home page fixed, margins fixed for all

--- a/app/views/artists/ar_rehman.html.erb
+++ b/app/views/artists/ar_rehman.html.erb
@@ -1,18 +1,11 @@
 <html lang="en">
-  <!-- <head>
+  <head>
     <style type=text/css>
-
         #pic{
           padding-left: 200px;
         }
-        #title{
-          color: white;
-        }
-        .col-md-8{
-          padding-left: 350px;
-        }
     </style>
-  </head> -->
+  </head>
 <body>
 <img id="pic" src="/assets/ar_rahman.jpg" width:"100" height:"100";>
 <div class="row hidden-md-down">
