--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
       <link href="assets/toolkit-bold.css" rel="stylesheet">
       <link href="assets/application-bold.css" rel="stylesheet">
       <link href="assets/home.css" rel="stylesheet">
-      <link href="assets/heading.css" rel="stylesheet">
+      <!-- <link href="assets/heading.css" rel="stylesheet"> -->
       <link href="assets/main.css" rel="stylesheet">
       <link rel="icon" type="image/png" href="/assets/music_icon.ico">
 
