--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -6,37 +6,6 @@
       overflow-y: hidden;
     }
     </style>
-    <!-- <style>
-    <meta name="google-site-verification" content="VnKXAe8yTsCLdUzCT8kSiwihu9fJFM4whHiPzohMRWw" />
-        /* body { -->
-          <!-- width: 1px;
-          min-width: 100%;
-          *width: 100%;
-        }
-        body{
-          overflow-y: hidden;
-        }
-        #stage {
-          height: 1px;
-          overflow: auto;
-          min-height: 100vh;
-        }
-        .navbar-brand{
-          font-family:fantasy;
-          font-size: 200%;
-          font-weight: 900;
-        }
-
-        .card-img-top{
-          height: 125px;
-          width: 155px;
-        }
-
-        .fm{
-          float: left;
-        } */ -->
-
-    <!-- </style> -->
     <script type="application/ld+json">
 {
   "@context": "http://schema.org",
@@ -99,18 +68,7 @@
             </p>
           </div>
         </div>
-</br>
-</br>
-</br>
-</br>
-</br>
-</br>
-</br>
-</br>
-</br>
-</br>
-</br>
-</br>
+        </br></br></br></br></br></br></br></br></br></br></br></br>
         <div class= "fm">
             <h2><span class="badge badge-success">FM Station 1: NRI Radio</span></h2>
             <audio controls src="http://50.7.99.163:11091/;"></audio><br></br>
@@ -197,7 +155,6 @@
 </div>
 
   <div class="block block-fill-height block-transparent block-angle app-block-chainz" id="chainz">
-
     <div class="block-bg-clip">
       <div class="block-bg">
         <div class="block-bg-img block-bg-img-top" style="background-image: url(/assets/auditorium.jpg)">
@@ -206,7 +163,6 @@
     </div>
   <div class="block-sm-middle block-xs-top">
       <div class="container">
-
           <div class="row">
             <div class="col-sm-2">
               <div class="card">
@@ -223,7 +179,7 @@
                  <img class="card-img-top" src="/assets/rayyi.jpg" alt="Rayyi rayyi">
                 <div class="card-body">
                   <a class="btn btn-primary" <%= link_to 'Rayyi Rayyi', rayyi_path %></a>
-              </div>
+                </div>
                 </div>
               </div>
 
@@ -284,8 +240,7 @@
   <div class="block block-fill-height block-transparent block-inverse block-angle app-block-kanye">
     <div class="block-bg-clip">
       <div class="block-bg">
-        <div class="block-bg-img block-bg-img-top"
-             style="background-image: url(/assets/gitar.jpg)">
+        <div class="block-bg-img block-bg-img-top" style="background-image: url(/assets/gitar.jpg)">
         </div>
       </div>
     </div>
@@ -308,14 +263,12 @@
           </div>
         </div>
         <div class="row mb-3">
-          <div class="col-md-8">
+          <div class="col-md-6">
             <div class="embed-responsive embed-responsive-16by9">
-              <iframe width="682" height="284" src="https://www.youtube.com/embed/-xgy9rTzUnw?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+              <iframe width="682" height="284" src="https://www.youtube.com/embed/ZG1Su0QwPYs?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
             </div>
-          </div>
         </div>
-        <div class="row mb-3">
-          <div class="col-md-8">
+          <div class="col-md-6">
             <div class="embed-responsive embed-responsive-16by9">
               <iframe width="682" height="284" src="https://www.youtube.com/embed/4gDYt1XPkkE?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
             </div>
@@ -327,8 +280,7 @@
   <div class="block block-transparent block-fill-height block-angle block-app-mosdef">
     <div class="block-bg-clip">
       <div class="block-bg">
-        <div class="block-bg-img block-bg-img-top"
-             style="background-image: url(/assets/show.jpg)">
+        <div class="block-bg-img block-bg-img-top" style="background-image: url(/assets/show.jpg)">
         </div>
       </div>
     </div>
@@ -353,7 +305,6 @@
                 <span>Sign Up Now</span>
               </span>
             </h1>
-
             <form action="https://facebook.com/WeLoveTeluguMusic/" method="post">
             <div class="text-ribbon-inputs-split">
               <input type="text" class="h4 text-ribbon-input text-ribbon-primary" placeholder="First Name" required>
@@ -411,6 +362,6 @@
     </div>
   </div>
 </div>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 </body>
 </html>
