--- a/app/views/welcome/songs.html.erb
+++ b/app/views/welcome/songs.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- <style>
+  <style>
   .song_images{
     margin-left: 420px;
     }
@@ -10,7 +10,7 @@
     .title{
       margin-left: 420px;
     }
-    </style> -->
+    </style>
 <body>
   <div class="title">
   <h3 class="block-title mb-4">
