--- a/app/views/welcome/video_songs.html.erb
+++ b/app/views/welcome/video_songs.html.erb
@@ -1,23 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <style type=text/css>
-/*
-    .col-md-8{
-      margin-left:150px;
-    }
-    .col-sm-4{
-      color: orange;
-      margin-left:150px;
-      font-size: 200%;
-    }
-    .title{
-      margin-left: 500px;
-    }
-    .song_images{
-      margin-left: 500px;
-    } */
-</style>
+  <link href="assets/heading.css" rel="stylesheet">
   </head>
   <body>
     <div class="title">
@@ -28,15 +12,28 @@
     </h3>
   </div>
   <img class="song_images" src="/assets/top10.jpg" width:"100" height:"100";>
-    <div class="row mb-3">
+
+      <div class="row mb-3">
+         <div class="col-sm-4">Bharath Ane Nenu</div>
+          <div class="col-md-8">
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe width="600" height="338" src="https://www.youtube.com/embed/2wGSKHW2PvI?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+      <hr>
+      <br>
+      <div class="row mb-3">
      <div class="col-sm-4"> Lover Also Fighter Also</div>
       <div class="col-md-8">
         <div class="embed-responsive embed-responsive-16by9">
           <iframe width="600" height="338" src="https://www.youtube.com/embed/ApLzE-TLBYU?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+          <hr>
+        </div>
         </div>
       </div>
-    </div>
-    <div class="row mb-3">
+      <br>
+      <div class="row mb-3">
      <div class="col-sm-4">Dhari Chudu</div>
       <div class="col-md-8">
         <div class="embed-responsive embed-responsive-16by9">
@@ -44,6 +41,7 @@
         </div>
       </div>
     </div>
+    <br>
     <div class="row mb-3">
        <div class="col-sm-4">Yentha Sakkagunnave</div>
         <div class="col-md-8">
@@ -52,6 +50,7 @@
         </div>
       </div>
     </div>
+    <br>
     <div class="row mb-3">
      <div class="col-sm-4"> Ninnala</div>
       <div class="col-md-8">
@@ -60,22 +59,25 @@
         </div>
       </div>
     </div>
+    <br>
     <div class="row mb-3">
      <div class="col-sm-4">Chusi Chudangane</div>
       <div class="col-md-8">
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe width="600" height="338" src="https://www.youtube.com/embed/_JVghQCWnRI?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+          <iframe width="600" height="338" src="https://www.youtube.com/embed/3smrEURoJcM?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
     </div>
+    <br>
     <div class="row mb-3">
-     <div class="col-sm-4">Chamak Chamak</div>
+     <div class="col-sm-4">Most Wanted Abbayi</div>
       <div class="col-md-8">
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe width="600" height="338" src="https://www.youtube.com/embed/Fp1_dxjyXwo?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+          <iframe width="600" height="338" src="https://www.youtube.com/embed/-EwRDhv0YvA?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
     </div>
+    <br>
     <div class="row mb-3">
      <div class="col-sm-4">Ga Gha Megha</div>
       <div class="col-md-8">
@@ -84,6 +86,7 @@
         </div>
       </div>
     </div>
+    <br>
     <div class="row mb-3">
      <div class="col-sm-4">Mandaara Mandaara</div>
       <div class="col-md-8">
@@ -92,22 +95,16 @@
         </div>
       </div>
     </div>
+    <br>
     <div class="row mb-3">
      <div class="col-sm-4">Dum Dare</div>
       <div class="col-md-8">
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe width="600" height="338" src="https://www.youtube.com/embed/S9uw4fR9ZCI?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+          <iframe width="600" height="338" src="https://www.youtube.com/embed/cww7DLVYdx0?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
     </div>
-        <div class="row mb-3">
-           <div class="col-sm-4"> Gaali Vaaluga</div>
-            <div class="col-md-8">
-            <div class="embed-responsive embed-responsive-16by9">
-              <iframe width="600" height="338" src="https://www.youtube.com/embed/h1bV5A0Mqq4?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-            </div>
-          </div>
-        </div>
-          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
   </body>
   </html>
