--- a/app/views/welcome/teluse.html.erb
+++ b/app/views/welcome/teluse.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <!-- <head>
     <style type=text/css>
     #pic{
       padding-left: 400px;
@@ -12,9 +12,9 @@
       padding-left: 350px;
     }
     </style>
-  </head>
+  </head> -->
 <body>
-<img id="yenthara" src="/assets/breakup.jpg" width:"100" height:"100";>
+<img id="pic" src="/assets/breakup.jpg" width:"100" height:"100";>
 <div class="row hidden-md-down">
   <div class="col-lg-12">
     <div class="card card-bold card-secondary mb-0 app-box-shadow">
