--- a/app/views/welcome/yenthara.html.erb
+++ b/app/views/welcome/yenthara.html.erb
@@ -14,7 +14,7 @@
       </style>
   </head>
 <body>
-<img id="yenthara" src="/assets/yenthara.jpg" width:"100" height:"100";>
+<img id="pic" src="/assets/yenthara.jpg" width:"100" height:"100";>
 <div class="row hidden-md-down">
   <div class="col-lg-12">
     <div class="card card-bold card-secondary mb-0 app-box-shadow">
