--- a/app/views/welcome/kothaga.html.erb
+++ b/app/views/welcome/kothaga.html.erb
@@ -3,7 +3,7 @@
   <head>
       <style type=text/css>
       #pic{
-        padding-left: 200px;
+        padding-left: 100px;
       }
     </style>
   </head>
@@ -15,6 +15,9 @@
       <div class="card-block pb-5">
               <p class="text-serif"><em>
                 <h1 id="title">Kothaga Song Lyrics From MCA</h1>
+                <p class="text-serif"><em>Kothaga Kothaga Song is a track from the MCA. Starring Nani,Sai Pallavi in lead roles. Composed by Devi Sri Prasad.
+                </em></p>
+                <hr>
                 <div class="row mb-3">
                   <div class="col-md-8">
                     <div class="embed-responsive embed-responsive-16by9">
