--- a/app/views/welcome/yenthara.html.erb
+++ b/app/views/welcome/yenthara.html.erb
@@ -1,18 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-      <style type=text/css>
-      #pic{
-        padding-left: 400px;
-      }
-      #title{
-        color: white;
-      }
-      .col-md-8{
-        padding-left: 350px;
-      }
-      </style>
-  </head>
 <body>
 <img id="pic" src="/assets/yenthara.jpg" width:"100" height:"100";>
 <div class="row hidden-md-down">
@@ -20,7 +7,9 @@
     <div class="card card-bold card-secondary mb-0 app-box-shadow">
       <div class="card-block pb-5">
         <p><h1 id="title">Yenthara Lokapu Sundarive from 2.0</h1>
-
+          <p class="text-serif"><em>Starring Rajinikanth, Akshay Kumar and Amy Jackson, Music Composed by A.R. Rahman, Directed by Shankar.
+        </em></p>
+        <hr>
           <div class="row mb-3">
             <div class="col-md-8">
               <div class="embed-responsive embed-responsive-16by9">
