--- a/app/views/welcome/teluse.html.erb
+++ b/app/views/welcome/teluse.html.erb
@@ -19,8 +19,10 @@
   <div class="col-lg-12">
     <div class="card card-bold card-secondary mb-0 app-box-shadow">
       <div class="card-block pb-5">
-        <p><h1 id="title">Arjun Reddy - The Breakup Song - Lyrics</h1>
-
+        <p><h1 id="title">The Breakup Song Lyrics From Arjun Reddy</h1>
+          <p class="text-serif"><em> Telisiney Na Nuvvey Song is a track from the Arjun Reddy. Starring Vijay Deverakonda, Shalini, Music Composed by Radhan, Directed by Sandeep Vanga and Produced by Pranay Vanga under the banner of Bhadrakali Pictures.
+          </em></p>
+          <hr>
           <div class="row mb-3">
             <div class="col-md-8">
               <div class="embed-responsive embed-responsive-16by9">
