--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
             <a class="nav-link" <%= link_to 'Lyrics', lyrics_path %><span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" <%= link_to 'FM Radio', andhra_mirchi_path %><span class="sr-only">(current)</span></a>
+            <a class="nav-link" <%= link_to 'FM Radio', fm_path %><span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" <%= link_to 'Video Songs', video_songs_path %><span class="sr-only">(current)</span></a>
