--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -55,7 +55,7 @@
           <div class="col-lg-5">
             <h1 class="block-title mb-4">
               <span class="text-ribbon text-ribbon-primary">
-                <span> Live FM Radio</span>
+                <span><a class="text-dark" <%= link_to 'Live FM Radio', lyrics_path %></a></span>
               </span>
             </h1>
             <p class="lead mt-1">
@@ -68,7 +68,30 @@
           </div>
         </div>
         </br></br></br></br></br></br></br></br></br></br></br></br>
-        <div class= "fm">
+        <div class="container">
+  <div class="row">
+    <div class="col">
+      <h2><span class="badge badge-success">FM Station 1: NRI Radio</span></h2>
+      <audio controls src="http://50.7.99.163:11091/;"></audio><br></br>
+    </div>
+    <div class="col">
+      <h2><span class="badge badge-success">FM Station 2: Spicy Radio</span></h2>
+      <audio controls src="http://proxima.shoutca.st:8266/stream"></audio><br></br>
+    </div>
+    <div class="w-100"></div>
+    <div class="col">
+    <h2><span class="badge badge-success">FM Station 3: Telugu One</span></h2>
+    <audio controls src="http://173.203.133.187:9700/;"></audio><br></br>
+    </div>
+    <div class="col">
+    <h2><span class="badge badge-success">FM Station 4: Radio 9</span></h2>
+    <audio controls src="http://174.37.252.208:8530/;stream.mp3;"></audio><br></br>
+  </div>
+  </div>
+</div>
+
+
+        <!-- <div class= "fm">
             <h2><span class="badge badge-success">FM Station 1: NRI Radio</span></h2>
             <audio controls src="http://50.7.99.163:11091/;"></audio><br></br>
             <h2><span class="badge badge-success">FM Station 2: Spicy Radio</span></h2>
@@ -77,7 +100,7 @@
             <audio controls src="http://173.203.133.187:9700/;"></audio><br></br>
             <h2><span class="badge badge-success">FM Station 4: Radio 9</span></h2>
             <audio controls src="http://174.37.252.208:8530/;stream.mp3;"></audio><br></br>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
@@ -149,7 +172,7 @@
               <%= link_to(image_tag("/assets/ar_rahman.jpg"), ar_rehman_path) %>
           </div><br>
           <h4 class="mb-0"><%= link_to 'A R Rahman', ar_rehman_path %></h4>
-        </div>
+        </div><br>
       </div>
     </div>
   </div>
@@ -223,7 +246,7 @@
           <div class="col-md-5 offset-sm-7">
             <h1 class="block-title mb-4">
                <span class="text-ribbon text-ribbon-primary">
-                <span>Hand Picked</span>
+                <span><a class="text-dark" <%= link_to 'Hand Picked Lyrics', lyrics_path %></a></span>
               </span>
             </h1>
             <p class="lead">
@@ -252,7 +275,7 @@
           <div class="col-md-5">
             <h1 class="block-title mb-4">
               <span class="text-ribbon">
-                <span>Music Videos</span>
+                <span><a class="text-white" <%= link_to 'Music Videos', video_songs_path %></a></span>
               </span>
             </h1>
             <p class="lead">
