added page count

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -5,12 +5,6 @@
     body{
       overflow-y: hidden;
     }
-    #songs_list{
-      float: left;
-    }
-    /* #signup{
-      float: left;
-    } */
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="application/ld+json">
@@ -327,7 +321,7 @@
       <p>Listen All tracks</p>
       <a class="btn btn-info" <%= link_to 'Listen Here', ranga_path %></a>
      </div>
-     <img class="d-block img-fluid" src="/assets/ranga2.jpg" alt="Music Album 2">
+     <img class="d-block img-fluid" src="/assets/ranga.jpg" alt="Music Album 2">
     </div>
     <div class="carousel-item">
     <div class="carousel-caption d-none d-md-block">
@@ -428,6 +422,8 @@
           </ul>
         </div>
       </div>
+      <div style="text-align:center;"><script type="text/javascript" src="http://services.webestools.com/cpt_visitors/54152-4-8.js"></script>
+      <br></br>
       <select id="rating" class="selectpicker">
           <option>Excellent</option>
           <option>Great</option>
