--- a/app/views/albums/ranga.html.erb
+++ b/app/views/albums/ranga.html.erb
@@ -16,7 +16,7 @@ Writers: Thota Srinivas, Kasi Vishal, Buchi Babu Sana, Srinivas Rongali
         <div class="row mb-3">
           <div class="col-md-8">
             <div class="embed-responsive embed-responsive-16by9">
-              <iframe width="682" height="284" src="https://www.youtube.com/embed/OPG6RNNZ04M&t=?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+              <iframe width="682" height="284" src="https://www.youtube.com/embed/OPG6RNNZ04M?ecver=2?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
         </div>
