bharath album added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -95,12 +95,13 @@
               Albums
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" <%= link_to 'Bharath Ane Nenu', bharath_path %></a>
+              <a class="dropdown-item" <%= link_to 'Krishnarjuna Yuddam', krish_path %></a>
               <a class="dropdown-item" <%= link_to 'Rangasthalam', ranga_path %></a>
               <a class="dropdown-item" <%= link_to 'Chal Mohan Ranga', chal_path %></a>
               <a class="dropdown-item" <%= link_to 'Kirrak Party',kirak_path %></a>
               <a class="dropdown-item" <%= link_to 'MLA', mla_path %></a>
               <a class="dropdown-item" <%= link_to 'Tholi Prema', tholi_path %></a>
-              <a class="dropdown-item" <%= link_to 'Krishnarjuna Yuddam', krish_path %></a>
             </div>
           </li>
 
