--- a/app/views/albums/bharath.html.erb
+++ b/app/views/albums/bharath.html.erb
@@ -3,19 +3,19 @@
       padding-left: 200px;
     }
 </style>
-<img id="pic" src="/assets/krish.jpg" width:"100" height:"100";>
+<img id="pic" src="/assets/bharath.jpg" width:"100" height:"100";>
 <div class="row hidden-md-down">
   <div class="col-lg-12">
     <div class="card card-bold card-secondary mb-0 app-box-shadow">
           <div class="card-block pb-5">
-        <h1 id="title">Krishnarjuna Yudham</h1>
-        <p class="text-serif"><em>Listen & Enjoy Krishnarjuna Yudham  Full Songs Telugu Movie Jukebox. Krishnarjuna Yudham starring Nani, Anupama Parameswaran, Rukshar Mir. Music by Hiphop Tamizha
-        </em></p>
+        <h1 id="title">Bharat Ane Nenu</h1>
+        <p class="text-serif"><em>Bharat Ane Nenu Jukebox Starring Mahesh Babu. Music  by Devi Sri Prasad & Lyrics by Ramajogayya Shastry, Directed by Koratala Siva.
+          </em></p>
         <hr>
         <div class="row mb-3">
           <div class="col-md-8">
             <div class="embed-responsive embed-responsive-16by9">
-              <iframe width="682" height="284" src="https://www.youtube.com/embed/OF3-kfCFnWQ?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+              <iframe width="682" height="284" src="https://www.youtube.com/embed/Edqxb9MPYXI?ecver=2?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
         </div>
